crates/plotnik-tests/tests/macro_diagnostics/fail/unknown_argument.rs
plotnik::query! {
    grammar = "arborium-javascript",
    flavor = "spicy",
    "Q = (program)"
}

fn main() {}
