crates/plotnik-tests/tests/macro_diagnostics/fail/unknown_argument.stderr
error: unknown argument `flavor`; `query!` accepts `grammar`, `file`, `fuel`, `memory`, `depth`, and the query string
 --> tests/macro_diagnostics/fail/unknown_argument.rs:3:5
  |
3 |     flavor = "spicy",
  |     ^^^^^^
